Ran code for 6 games I was at
Includes output as mygames.csv

--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import numpy\n",
@@ -20,16 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "# runs in about 5 minutes\n",
     "#with open('events.json','r') as f:\n",
-    "#with open('events_2012-2016.json','r') as f:\n",
-    "with open('events_1927_1938.json','r') as f:\n",
+    "with open('events_2012-2016.json','r') as f:\n",
+    "#with open('events_1927_1938.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "#pprint(allgames[2])   \n",
@@ -42,15 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
-    "mygames = ['BSN192704140']\n",
+    "#mygames = ['BSN192704140']\n",
     "\n",
-    "#mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300', 'BAL201304210', 'BAL201305170']\n",
+    "mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300', 'BAL201304210', 'BAL201305170']\n",
     "\n",
     "#mygames += ['', 'BAL201405010', 'BAL201406130', 'BAL201406250', 'MIA201407030', 'PIT201605180']\n",
     "#mygames += ['SDN201606150', 'WAS201607200', 'BAL201608180']\n",
@@ -69,18 +94,26 @@
     "    if (thisid in mygames):\n",
     "        allgames2_df = allgames2_df.append(thisrow)\n",
     "\n",
-    "#allgames_df = allgames2_df\n",
+    "allgames_df = allgames2_df\n",
     "\n",
     "print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "column_list = ['event_in_game', 'event_type', 'inning', 'home_or_visitor', 'batterID']\n",
     "column_list += ['pitch_count', 'pitch_sequence', 'event', 'comment', 'sub_team', 'sub_batting_order', 'sub_position']\n",
@@ -90,18 +123,26 @@
     "display_order = ['gameID', 'visiting_team', 'inning', 'batting_team']\n",
     "display_order += ['outs', 'balls', 'strikes', 'pitch_sequence']\n",
     "display_order += ['visitor_score', 'home_score', 'batterID', 'batter_hand', 'pitcherID', 'pitcher_hand']\n",
-    "#display_order += ['catcherID', '1bID', '2bID', '3bID', 'ssID', 'lfID', 'cfID', 'rfID']\n",
-    "#display_order += ['runner1b', 'runner2b', 'runner3b']\n",
+    "display_order += ['catcherID', '1bID', '2bID', '3bID', 'ssID', 'lfID', 'cfID', 'rfID']\n",
+    "display_order += ['runner1b', 'runner2b', 'runner3b']\n",
     "print('ok')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "def load_rosters():\n",
     "    all_rosters_df = pandas.read_csv('fullroster.csv')\n",
@@ -398,12 +439,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing game 1 of 6: BAL201208060...\n",
+      "Processing game 2 of 6: BAL201208300...\n",
+      "Processing game 3 of 6: BAL201209300...\n",
+      "Processing game 4 of 6: SEA201208150...\n",
+      "Processing game 5 of 6: BAL201304210...\n",
+      "Processing game 6 of 6: BAL201305170...\n",
+      "Writing file...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "debug = 0\n",
     "\n",
@@ -416,8 +472,8 @@
     "\n",
     "for thisgameID,thisrow in allgames_df.iterrows():\n",
     "    cnt = cnt + 1\n",
-    "    if (numpy.mod(cnt,10) == 0):\n",
-    "        print('Processing game {0:,.0f} of {1:,.0f}: {2}...'.format(cnt, nGames, thisgameID))\n",
+    "#    if (numpy.mod(cnt,10) == 0):\n",
+    "    print('Processing game {0:,.0f} of {1:,.0f}: {2}...'.format(cnt, nGames, thisgameID))\n",
     "    game_events_df = pandas.DataFrame()\n",
     "        \n",
     "    thisgame_df = pandas.DataFrame(thisrow['events'], columns=column_list)\n",
@@ -440,13 +496,7 @@
     "    foundinnings = thisgame_df['inning'].drop_duplicates().values.tolist()\n",
     "    theseinnings = numpy.arange(1, numpy.max(foundinnings)+1) # it's +2 b/c it expects a 0-based list\n",
     "\n",
-    "#    If we need to switch the sub side.\n",
-    "#    thisgame_df['home_or_visitor'] = numpy.where(thisgame_df['event_type'] == 'sub', 1 - thisgame_df['home_or_visitor'], thisgame_df['home_or_visitor'])\n",
-    "#    print('STARTERS:')\n",
-    "#    print(playing_df)\n",
-    "\n",
     "    for ing in theseinnings:\n",
-    "#        print ('Inning ',ing)\n",
     "        for side in range(0,2):                           # iter through each half-inning\n",
     "            if (debug > 0):\n",
     "                print('Inning {0:.0f}, side {1:.0f}'.format(ing, side))\n",
@@ -528,11 +578,6 @@
     "    \n",
     "    events_df = pandas.concat((events_df, game_events_df), axis=0)\n",
     "\n",
-    "#display_order = ['gameID', 'date', event_in_game']\n",
-    "display_order = ['inning', 'home_or_visitor', 'batterID']\n",
-    "display_order += ['play', 'modifiers', 'baserunning', 'outs']\n",
-    "display_order += ['runner1b', 'runner2b', 'runner3b', 'visitor_score', 'home_score']\n",
-    "\n",
     "#events_df = events_df.fillna('')\n",
     "\n",
     "events_df = events_df.reset_index()\n",
@@ -543,11 +588,11 @@
     "events_df.index.name = 'eventID'\n",
     "\n",
     "events_df.sort_values('gameID')\n",
-    "#events_df = events_df[display_order]\n",
+    "events_df = events_df[display_order]\n",
     "#print('Final score: ',score)\n",
     "#events_df\n",
     "print('Writing file...')\n",
-    "events_df.to_csv('events_1927_1938.csv', encoding='utf-8')\n",
+    "events_df.to_csv('mygames.csv', encoding='utf-8')\n",
     "print('Done!')"
    ]
   },
