Added home team to output

--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "player_columns = ['playerID', 'name', 'batting_order', 'position']\n",
     "\n",
-    "display_order = ['gameID', 'visiting_team', 'inning', 'batting_team']\n",
+    "display_order = ['gameID', 'visiting_team', 'home_team', 'inning', 'batting_team']\n",
     "display_order += ['outs', 'balls', 'strikes', 'pitch_sequence']\n",
     "display_order += ['visitor_score', 'home_score', 'batterID', 'batter_hand', 'pitcherID', 'pitcher_hand']\n",
     "display_order += ['catcherID', '1bID', '2bID', '3bID', 'ssID', 'lfID', 'cfID', 'rfID']\n",
