Updated everything to work with new data loading scripts
NEXT, need to correct the definition of at-bats in the mess with events file.

--- a/process_events_try2.ipynb
+++ b/process_events_try2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -17,23 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# runs in about 5 minutes\n",
-    "#with open('events_raw.json','r') as f:\n",
-    "with open('events_raw_2012-2016.json','r') as f:\n",
+    "with open('events_raw.json','r') as f:\n",
+    "#with open('events_raw_2012-2016.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "#pprint(allgames[2])   \n",
@@ -42,32 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "processing game 0...\n",
-      "processing game 1,000...\n",
-      "processing game 2,000...\n",
-      "processing game 3,000...\n",
-      "processing game 4,000...\n",
-      "processing game 5,000...\n",
-      "processing game 6,000...\n",
-      "processing game 7,000...\n",
-      "processing game 8,000...\n",
-      "processing game 9,000...\n",
-      "processing game 10,000...\n",
-      "processing game 11,000...\n",
-      "preparing to save file...\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "column_list = ['event_in_game', 'event_type', 'inning', 'home_or_visitor', 'batterID']\n",
     "column_list += ['pitch_count', 'pitch_sequence', 'event', 'comment', 'sub_team', 'sub_batting_order', 'sub_position']#, 'gameID']\n",
@@ -82,15 +53,12 @@
     "    for j in range(0,len(thisgameevents_df)): #- 1):\n",
     "        if (thisgameevents_df.iloc[j]['event_type'] != 'play'):\n",
     "            thisgameevents_df.iloc[j]['inning'] = thisgameevents_df.iloc[j-1]['inning']\n",
+    "            thisgameevents_df.iloc[j]['home_or_visitor'] = thisgameevents_df.iloc[j-1]['home_or_visitor']\n",
+    "            \n",
     "        if (thisgameevents_df.iloc[j-1]['event_type'] not in ('play','sub')):\n",
     "            thisgameevents_df.iloc[j]['comment'] = thisgameevents_df.iloc[j-1]['comment'] + ' ' + thisgameevents_df.iloc[j]['comment']\n",
-    "#            if (thisgameevents_df.iloc[j]['event_type'] in ('badj', 'padj', 'ladj')):\n",
-    "#                print(allgames[i]['id'])\n",
-    "#                print('-------------')\n",
-    "#                print(thisgameevents_df[show_columns_for_weirdness].iloc[j])\n",
-    "#                print('\\n')\n",
-    "#    thisgameevents_df = thisgameevents_df[(thisgameevents_df['event_type'] == 'play') | (thisgameevents_df['event_type'] == 'sub')]\n",
-    "    thisgameevents_df = thisgameevents_df[thisgameevents_df['event_type'] != 'com']\n",
+    "\n",
+    "    thisgameevents_df = thisgameevents_df[(thisgameevents_df['event_type'] == 'play') | (thisgameevents_df['event_type'] == 'sub')]\n",
     "    thisgameevents_df = thisgameevents_df.drop('event_in_game',axis=1)\n",
     "    thisgameevents_df = thisgameevents_df.reset_index(drop=True)\n",
     "    thisgameevents_df.index.name = 'event_in_game'\n",
@@ -98,7 +66,7 @@
     "\n",
     "print('preparing to save file...')\n",
     "#thisgameevents_df\n",
-    "with open('events_2012-2016.json','w') as f:\n",
+    "with open('events.json','w') as f:\n",
     "    json.dump(allgames, f)\n",
     "print('done')"
    ]
