--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import numpy\n",
@@ -28,20 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# runs in about 5 minutes\n",
     "#with open('events.json','r') as f:\n",
@@ -59,23 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#pdf: TOR201604250\n",
+    "#bdf: TOR201604250\n",
+    "#ldf: OAK201309040\n",
+    "#mygames = ['SLA192708270']\n",
+    "\n",
+    "#mygames = ['OAK201309040', 'TOR201604250']\n",
+    "\n",
+    "#mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300', 'BAL201304210', 'BAL201305170']\n",
+    "\n",
     "#mygames = ['BSN192704140']\n",
     "\n",
-    "mygames = ['BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300', 'BAL201304210', 'BAL201305170']\n",
+    "\n",
     "\n",
     "#mygames += ['', 'BAL201405010', 'BAL201406130', 'BAL201406250', 'MIA201407030', 'PIT201605180']\n",
     "#mygames += ['SDN201606150', 'WAS201607200', 'BAL201608180']\n",
@@ -83,66 +67,50 @@
     "#weird_game_ids = ['CLE192708190', 'BOS193008310', 'BOS193107250', 'CHA193304220', 'NYA193606030', 'MLN195505152']\n",
     "#weird_game_ids += ['MIN196907170', 'NYN197208160', 'KCA201109150', 'TOR201208130', 'KCA201605310']\n",
     "\n",
-    "somecolumns = allgames_df.columns\n",
+    "#somecolumns = allgames_df.columns\n",
     "\n",
-    "allgames2_df = pandas.DataFrame(columns=somecolumns)\n",
-    "allgames2_df['id'] = ''\n",
-    "allgames2_df = allgames2_df.set_index('id')\n",
+    "#allgames2_df = pandas.DataFrame(columns=somecolumns)\n",
+    "#allgames2_df['id'] = ''\n",
+    "#allgames2_df = allgames2_df.set_index('id')\n",
     "\n",
+    "#for thisid, thisrow in allgames_df.iterrows():\n",
+    "#    if (thisid in mygames):\n",
+    "#        allgames2_df = allgames2_df.append(thisrow)\n",
     "\n",
-    "for thisid, thisrow in allgames_df.iterrows():\n",
-    "    if (thisid in mygames):\n",
-    "        allgames2_df = allgames2_df.append(thisrow)\n",
-    "\n",
-    "allgames_df = allgames2_df\n",
+    "#allgames_df = allgames2_df\n",
     "\n",
     "print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "column_list = ['event_in_game', 'event_type', 'inning', 'home_or_visitor', 'batterID']\n",
     "column_list += ['pitch_count', 'pitch_sequence', 'event', 'comment', 'sub_team', 'sub_batting_order', 'sub_position']\n",
     "\n",
     "player_columns = ['playerID', 'name', 'batting_order', 'position']\n",
     "\n",
-    "display_order = ['gameID', 'visiting_team', 'home_team', 'inning', 'batting_team']\n",
-    "display_order += ['outs', 'balls', 'strikes', 'pitch_sequence']\n",
-    "display_order += ['visitor_score', 'home_score', 'batterID', 'batter_hand', 'pitcherID', 'pitcher_hand']\n",
+    "display_order = ['gameID', 'date', 'event_in_game', 'visiting_team', 'home_team', 'inning', 'home_or_visitor']\n",
+    "display_order += ['visitor_score', 'home_score', 'batterID', 'batter_hand', 'pitcherID', 'pitcher_hand', 'abflag']\n",
     "display_order += ['catcherID', '1bID', '2bID', '3bID', 'ssID', 'lfID', 'cfID', 'rfID']\n",
+    "display_order += ['outs', 'balls', 'strikes', 'pitch_sequence']\n",
     "display_order += ['runner1b', 'runner2b', 'runner3b']\n",
-    "print('ok')"
+    "display_order += ['play', 'modifiers', 'baserunning', 'comment']\n",
+    "print('got columns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_rosters():\n",
     "    all_rosters_df = pandas.read_csv('fullroster.csv')\n",
@@ -202,7 +170,11 @@
     "                    \n",
     "    thisevent['pitcherID'] = playing_df['playerID'][(playing_df['which_team'] == fielding_flag) & (playing_df['position'] == 1)].tolist()[0]                               \n",
     "\n",
-    "    thisevent['pitcher_hand'] = roster_df['throwing_hand'][\n",
+    "    \n",
+    "    if (re.search('padj: ', thisevent['comment'].lower())):   # correct if there is a badj\n",
+    "        thisevent['pitcher_hand'] = thisevent['comment'][re.search('padj: ', thisevent['comment'].lower()).end():re.search('padj: ', thisevent['comment'].lower()).end()+1]\n",
+    "    else:\n",
+    "        thisevent['pitcher_hand'] = roster_df['throwing_hand'][\n",
     "            (roster_df['playerID'] == thisevent['pitcherID']) & \n",
     "            (roster_df['year'] == float(thisevent['gameID'][3:7])) \n",
     "            ].tolist()[0]\n",
@@ -355,7 +327,7 @@
     "#    print('Advancing runners, then batter: Inning {0:.0f}, side {1:.0f}'.format(evnt['inning'], evnt['home_or_visitor']))\n",
     "    \n",
     "    # After baserunners have been advanced as needed, advance the batter too.\n",
-    "    if (evnt['play'][0] in ('I', 'F', 'E')):\n",
+    "    if (evnt['play'][0] in ('I', 'F', 'E', 'B', 'O')):\n",
     "        if ('B' not in evnt['baserunning']):   # now advance the batter to first, unless he's explicitly out\n",
     "            basers[0] = evnt['batterID']\n",
     "            \n",
@@ -375,9 +347,16 @@
     "    elif (evnt['play'][0] == 'S'):\n",
     "        if (re.match(r'SB', evnt['play'])):  # a single as opposed to a stolen base\n",
     "#            print('Stolen base!')\n",
-    "            stolen_base = int(evnt['play'][2])\n",
+    "            stolen_base = evnt['play'][2]\n",
+    "            if (stolen_base == 'H'):\n",
+    "                stolen_base = 4\n",
+    "            else:\n",
+    "                stolen_base = int(stolen_base)\n",
+    "                \n",
     "            orig_base = stolen_base - 1\n",
-    "            basers[stolen_base-1] = basers[orig_base-1]\n",
+    "            \n",
+    "            if (stolen_base < 4):   # only move ahead one base if home not stolen\n",
+    "                basers[stolen_base-1] = basers[orig_base-1]\n",
     "            basers[orig_base-1] = ''\n",
     "#            print(basers)\n",
     "            evnt['abflag'] = 0\n",
@@ -410,18 +389,23 @@
     "            basers[0] = evnt['batterID']\n",
     "    \n",
     "    elif (evnt['play'][0] == 'C'):   # caught stealing\n",
-    "#        print('Caught stealing!')\n",
-    "        stolen_base = evnt['play'][2]\n",
-    "        if (stolen_base == 'H'):\n",
-    "            stolen_base = 4\n",
-    "        else:\n",
-    "            stolen_base = int(stolen_base)\n",
-    "        orig_base = stolen_base - 1\n",
-    "        oots = oots + 1\n",
-    "        basers[orig_base-1] = ''\n",
-    "#        print(basers)    \n",
-    "        evnt['abflag'] = 0\n",
+    "        if (re.match(r'CS',evnt['play'])):\n",
+    "#            print('Caught stealing!')\n",
+    "            stolen_base = evnt['play'][2]\n",
+    "            if (stolen_base == 'H'):\n",
+    "                stolen_base = 4\n",
+    "            else:\n",
+    "                stolen_base = int(stolen_base)\n",
+    "            orig_base = stolen_base - 1\n",
+    "            oots = oots + 1\n",
+    "            basers[orig_base-1] = ''\n",
+    "    #        print(basers)    \n",
+    "            evnt['abflag'] = 0\n",
+    "        else:   # just C means catcher interference, batter to first\n",
+    "            if ('B' not in evnt['baserunning']):\n",
+    "                basers[2] = evnt['batterID']\n",
     "\n",
+    "            \n",
     "    elif (evnt['play'][0] == 'N'):  # No play\n",
     "        evnt['abflag'] = 0\n",
     "    \n",
@@ -439,27 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing game 1 of 6: BAL201208060...\n",
-      "Processing game 2 of 6: BAL201208300...\n",
-      "Processing game 3 of 6: BAL201209300...\n",
-      "Processing game 4 of 6: SEA201208150...\n",
-      "Processing game 5 of 6: BAL201304210...\n",
-      "Processing game 6 of 6: BAL201305170...\n",
-      "Writing file...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "debug = 0\n",
     "\n",
@@ -506,13 +475,13 @@
     "            fieldingflag = 1 - side  # flag: makes fielding team the opposite of batting team\n",
     "\n",
     "            for eig, thisevent in halfinn.iterrows():    # iter through all events in this half-inn    \n",
-    "\n",
+    "                    \n",
     "                if (thisevent['event_type'] == 'sub'):\n",
     "                    thisyear = this_info_df['date'].apply(lambda x: x.year)\n",
     "                    (playing_df, onbase) = make_substitution(playing_df, roster_df, thisevent, this_info_df, onbase)\n",
     "                else:\n",
     "                    if (debug > 0):\n",
-    "                        print(thisevent[['inning', 'home_or_visitor', 'batterID', 'event']].tolist())\n",
+    "                        print(thisevent[['inning', 'home_or_visitor', 'batterID', 'event_type', 'event', 'comment']].tolist())\n",
     "                    thisevent['visiting_team'] = this_info_df['visteam'].tolist()[0]\n",
     "                    thisevent['home_team'] = this_info_df['hometeam'].tolist()[0]\n",
     "                    thisevent['date'] = this_info_df['date'].tolist()[0]\n",
@@ -532,7 +501,11 @@
     "\n",
     "                    # batterID gets loaded from raw data, but look up his handendess... and....\n",
     "                    # DON'T FORGET TO CORRECT THIS FOR BADJ IF NEEDED!\n",
-    "                    thisevent['batter_hand'] = roster_df['batting_hand'][(roster_df['playerID'] == thisevent['batterID']) & (roster_df['team'] == thisevent['batting_team']) & (roster_df['year'] == float(thisevent['gameID'][3:7]))].tolist()[0]\n",
+    "                    \n",
+    "                    if (re.search('badj: ', thisevent['comment'].lower())):   # correct if there is a badj\n",
+    "                        thisevent['batter_hand'] = thisevent['comment'][re.search('badj: ', thisevent['comment'].lower()).end():re.search('badj: ', thisevent['comment'].lower()).end()+1]\n",
+    "                    else:\n",
+    "                        thisevent['batter_hand'] = roster_df['batting_hand'][(roster_df['playerID'] == thisevent['batterID']) & (roster_df['team'] == thisevent['batting_team']) & (roster_df['year'] == float(thisevent['gameID'][3:7]))].tolist()[0]\n",
     "\n",
     "                    # if there is baserunning info, implement it first\n",
     "                    if (thisevent['baserunning'] != ''):\n",
@@ -588,11 +561,16 @@
     "events_df.index.name = 'eventID'\n",
     "\n",
     "events_df.sort_values('gameID')\n",
-    "events_df = events_df[display_order]\n",
+    "\n",
+    "#display_order = ['gameID', 'inning', 'home_or_visitor']\n",
+    "#display_order += ['batterID', 'batter_hand', 'pitcherID', 'pitcher_hand']\n",
+    "#display_order += ['play', 'modifiers', 'baserunning', 'comment']\n",
+    "\n",
+    "#events_df = events_df[display_order]\n",
     "#print('Final score: ',score)\n",
-    "#events_df\n",
+    "\n",
     "print('Writing file...')\n",
-    "events_df.to_csv('mygames.csv', encoding='utf-8')\n",
+    "events_df.to_csv('events_2012-2016.csv', encoding='utf-8')\n",
     "print('Done!')"
    ]
   },
