Validated proper working of advance batter function, maybe?

--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -286,22 +286,22 @@
     "#    print('Advancing runners, then batter: Inning {0:.0f}, side {1:.0f}'.format(evnt['inning'], evnt['home_or_visitor']))\n",
     "   \n",
     "    breakout = False\n",
-    "    if (debug == 2):\n",
+    "    if (debug >= 2):\n",
     "        print('In advance batter function; breakout is starting as ',breakout)\n",
     "    \n",
     "    if (evnt['play'][0] == 'N' and (not(breakout))):  # No play means no at-bat and break out of if series\n",
-    "        if (debug == 2):\n",
+    "        if (debug >= 2):\n",
     "            print('no play')\n",
     "        evnt['abflag'] = 0\n",
     "        breakout = True\n",
     "    \n",
     "    elif (re.match(r'WP|PB|SB|CS|DI', evnt['play']) and (not(breakout))): # baserunning events not involving the batter\n",
-    "        if (debug == 2):\n",
+    "        if (debug >= 2):\n",
     "            print('baserunning event not involving batter')\n",
     "\n",
     "        evnt['abflag'] = 0\n",
     "        if (re.match(r'SB', evnt['play'])):   # advance base-stealer\n",
-    "            if (debug == 2):\n",
+    "            if (debug >= 2):\n",
     "                print('Stolen base')\n",
     "            stolen_base = evnt['play'][2]\n",
     "            if (stolen_base == 'H'):\n",
@@ -314,7 +314,7 @@
     "            basers[orig_base-1] = ''      \n",
     "            \n",
     "        if (re.match(r'CS', evnt['play'])):   # drop caught-stealer and increment outs\n",
-    "            if (debug == 2):\n",
+    "            if (debug >= 2):\n",
     "                print('Caught stealing')\n",
     "            caught_base = evnt['play'][2]\n",
     "            if (caught_base == 'H'):\n",
@@ -328,57 +328,75 @@
     "        breakout = True\n",
     "        \n",
     "    elif ((re.match(r'W|I|C|HP',evnt['play'])) and (not(breakout))):   # batter to first but no at-bat\n",
-    "        if (debug == 2):\n",
+    "        if (debug >= 2):\n",
     "            print('Walk or similar')\n",
     "            \n",
     "        thisevent['abflag'] = 0  # not an at-bat\n",
     "        if ('B' not in evnt['baserunning']):     # if explicit batter advance not provided...\n",
     "            basers[0] = evnt['batterID']              # advance batter to first\n",
+    "        if (debug == 3):\n",
+    "            print('Now on base: ',basers)\n",
     "        breakout = True\n",
     "    \n",
     "    \n",
-    "    elif ((evnt['play'][0] in ('S', 'F', 'E')) and (not(breakout))):    # single/FC/error: batter to first with at-bat\n",
-    "        if (debug == 2):\n",
+    "    elif ((evnt['play'][0] in ('S', 'FC', 'E')) and (not(breakout))):    # single/FC/error: batter to first with at-bat\n",
+    "        if (debug >= 2):\n",
     "            print('Single or similar')\n",
     "                    \n",
     "        if ('B' not in evnt['baserunning']):       # (unless batter advance provided explicitly earlier)\n",
     "            basers[0] = evnt['batterID']\n",
+    "\n",
+    "        if (debug == 3):\n",
+    "            print('Now on base: ',basers)\n",
+    "\n",
     "        breakout = True\n",
     "\n",
     "        \n",
     "    elif ((evnt['play'][0] == 'D') and (not(breakout))):\n",
-    "        if (debug == 2):\n",
+    "        if (debug >= 2):\n",
     "            print('Double or similar')\n",
     "\n",
     "        if ('B' not in evnt['baserunning']):       # (unless batter advance provided explicitly earlier)\n",
     "            basers[1] = evnt['batterID']\n",
+    "\n",
+    "        if (debug == 3):\n",
+    "            print('Now on base: ',basers)\n",
+    "\n",
     "        breakout = True\n",
     "\n",
     "    elif ((evnt['play'][0] == 'T') and (not(breakout))):\n",
-    "        if (debug == 2):\n",
+    "        if (debug >= 2):\n",
     "            print('Triple or similar')\n",
     "        \n",
     "        if ('B' not in evnt['baserunning']):       # (unless batter advance provided explicitly earlier)\n",
     "            basers[2] = evnt['batterID']\n",
+    "\n",
+    "        if (debug == 3):\n",
+    "            print('Now on base: ',basers)\n",
+    "\n",
     "        breakout = True\n",
     "\n",
     "    elif ((re.match(r'HR', evnt['play'])) and (not(breakout))):   # home run\n",
-    "        if (debug == 2):\n",
+    "        if (debug >= 2):\n",
     "            print('Home run')\n",
     "\n",
     "#            print('Home run!')\n",
     "#            print('Score was ',scr)\n",
-    "            scr[teem] = scr[teem] + 1            # add 1 to score for batter crossing home\n",
-    "            basers = ['', '', '']                   # empty bases since everyone has scored\n",
-    "            \n",
+    "        scr[teem] = scr[teem] + 1            # add 1 to score for batter crossing home\n",
+    "        basers = ['', '', '']                   # empty bases since everyone has scored\n",
+    "\n",
+    "        if (debug == 3):\n",
+    "            print('Now on base: ',basers)\n",
+    "\n",
     "    else:\n",
     "        print('wtf starting letter not in set!')\n",
     "        print(evnt['play'])\n",
     "\n",
-    "#    print ('Now on base: [{0}, {1}, {2}] with {3} outs; score {4}-{5}'.format(basers[0], basers[1], basers[2], oots, scr[0], scr[1]))\n",
-    "#    print('\\n')\n",
+    "    if (debug == 3):\n",
+    "        print ('Now on base: [{0}, {1}, {2}] with {3} outs; score {4}-{5}'.format(basers[0], basers[1], basers[2], oots, scr[0], scr[1]))\n",
+    "        print('\\n')\n",
     "\n",
-    "    if (debug == 2):\n",
+    "    if (debug >= 2):\n",
     "        print('\\n')\n",
     "    \n",
     "    return (evnt, basers, oots, scr)\n",
@@ -404,6 +422,8 @@
     "\n",
     "\n",
     "print('debug = {:.0f}'.format(debug))\n",
+    "print('\\n')\n",
+    "\n",
     "nGames = len(allgames_df)\n",
     "cnt = 0\n",
     "\n",
@@ -441,6 +461,7 @@
     "        for side in range(0,2):                           # iter through each half-inning\n",
     "            if (debug > 0):\n",
     "                print('Inning {0:.0f}, side {1:.0f}'.format(ing, side))\n",
+    "                print('\\n')\n",
     "            halfinn = thisgame_df[(thisgame_df['inning'] == ing) & (thisgame_df['home_or_visitor'] == side)]\n",
     "            onbase = ['', '', '']\n",
     "            nOuts = 0            #     and there are no outs\n",
@@ -578,17 +599,23 @@
     "                        \n",
     "                    if (debug >= 2):\n",
     "                        print('\\n')\n",
-    "                        print('entering advance batter section on play number {:}'.format(eig))\n",
+    "                        print('entering plate appearance parsing section on play number {:}'.format(eig))\n",
     "                        \n",
     "                    # If the play starts with fielder info or is a strikeout, increment outs\n",
     "                    if (re.match(r'[0-9K]+',thisevent['play'])):\n",
     "                        if (debug >= 2):\n",
     "                            print('out')\n",
     "                        nOuts = nOuts + 1\n",
+    "                        print('\\n')\n",
+    "                        \n",
     "                    else:\n",
     "                        if (debug >= 2):\n",
     "                            print('not out')\n",
     "                        print('\\n')\n",
+    "                    \n",
+    "                        (thisevent, onbase, nOuts, score) = advance_batter(thisevent, onbase, nOuts, score, side, debug)\n",
+    "\n",
+    "                        \n",
     "                    # update info based on the play that has occurred\n",
     "                    thisevent['outs'] = nOuts\n",
     "                    thisevent['runner1b'] = onbase[0]\n",
