--- a/2. Load game data.ipynb
+++ b/2. Load game data.ipynb
@@ -23,6 +23,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "213,307 games parsed\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -439,6 +446,7 @@
     "gamedata = gamedata.reset_index()\n",
     "gamedata = gamedata.drop('index',axis=1)\n",
     "gamedata.index.name = 'gameID'\n",
+    "print('{:,.0f} games parsed'.format(len(gamedata)))\n",
     "gamedata.head(1).transpose()"
    ]
   },
