--- a/3. Load event data.ipynb
+++ b/3. Load event data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -37,32 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#os.chdir('retrosheet/')\n",
-    "#os.getcwd()\n",
-    "\n",
-    "#decades = np.linspace(1920,2010,10)\n",
-    "#zipfiles = []\n",
-    "#for x in decades:\n",
-    "#    zipfiles.append('{:.0f}'.format(x)+'seve.zip')\n",
-    "#for filename in zipfiles:\n",
-    "#    zip_ref = zipfile.ZipFile(filename, 'r')\n",
-    "#    zip_ref.extractall('.')\n",
-    "#    zip_ref.close()\n",
-    "\n",
-    "#os.chdir('../')\n",
-    "#print('Done')\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -79,8 +54,6 @@
     "allfiles = []\n",
     "\n",
     "yeararray = np.linspace(1921,2016,96)\n",
-    "#yeararray = [1927,1938]\n",
-    "#yeararray = np.linspace(2012,2016,5)\n",
     "\n",
     "for oneyear in yeararray:\n",
     "    for oneteam in teamarray:\n",
@@ -89,16 +62,15 @@
     "        afile = 'retrosheet/' + '{:.0f}'.format(oneyear)+oneteamname+'.EV'+itsleague\n",
     "        if (os.path.isfile(afile)):\n",
     "            allfiles.append(afile)\n",
-    "\n",
-    "#print(allfiles)\n",
     "print('files identified')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1842,7 +1814,6 @@
       "retrosheet/2009TEX.EVA\n",
       "retrosheet/2009TOR.EVA\n",
       "retrosheet/2009WAS.EVN\n",
-      "retrosheet/2010ANA.EVA\n",
       "retrosheet/2010ARI.EVN\n",
       "retrosheet/2010ATL.EVN\n",
       "retrosheet/2010BAL.EVA\n",
@@ -2034,8 +2005,8 @@
       "retrosheet/2016TEX.EVA\n",
       "retrosheet/2016TOR.EVA\n",
       "retrosheet/2016WAS.EVN\n",
-      "ahoy\n",
-      "ok\n"
+      "all games processed\n",
+      "file written\n"
      ]
     }
    ],
@@ -2169,15 +2140,11 @@
     "            events = np.vstack((events,thisevent))\n",
     "            eventnum = eventnum + 1\n",
     "\n",
-    "#for i in range(0,len(allgames)):\n",
-    "#    print('i = ',i)\n",
-    "#    pprint(allgames[i])\n",
-    "#    print('\\n')\n",
-    "print('ahoy')\n",
+    "print('all games processed')\n",
     "\n",
     "with open('events_raw.json', 'w') as f:\n",
     "    json.dump(allgames, f)\n",
-    "print('ok')"
+    "print('file written')"
    ]
   },
   {
