--- a/5. Get game info from original events file.ipynb
+++ b/5. Get game info from original events file.ipynb
@@ -26,21 +26,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ok\n"
+      "done\n"
      ]
     }
    ],
    "source": [
     "# runs in about 5 minutes\n",
-    "with open('events_2012-2016.json','r') as f:\n",
-    "#with open('events_1927_1938.json','r') as f:\n",
+    "with open('events_with_derived.json','r') as f:\n",
     "    allgames = json.load(f)\n",
-    "print('ok')\n",
     "\n",
     "allgames_bk = allgames\n",
     "\n",
     "allgames_df = pandas.DataFrame(allgames)\n",
-    "allgames_df = allgames_df.set_index('id')"
+    "allgames_df = allgames_df.set_index('id')\n",
+    "\n",
+    "print('done')"
    ]
   },
   {
@@ -84,6 +84,15 @@
     "info_df.to_csv('gameinfo_from_events.csv')\n",
     "print('Done')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
