Transfering reconstructions to official retrosheet format

--- a/6. Organize events.ipynb
+++ b/6. Organize events.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -27,13 +27,13 @@
      "output_type": "stream",
      "text": [
       "ok\n",
-      "148169\n"
+      "15467\n"
      ]
     }
    ],
    "source": [
     "# runs in about 5 minutes\n",
-    "with open('events_with_derived.json','r') as f:\n",
+    "with open('events_with_derived_2010s.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "print(len(allgames))\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -68,139 +68,6 @@
       "processing game 13,000...\n",
       "processing game 14,000...\n",
       "processing game 15,000...\n",
-      "processing game 16,000...\n",
-      "processing game 17,000...\n",
-      "processing game 18,000...\n",
-      "processing game 19,000...\n",
-      "processing game 20,000...\n",
-      "processing game 21,000...\n",
-      "processing game 22,000...\n",
-      "processing game 23,000...\n",
-      "processing game 24,000...\n",
-      "processing game 25,000...\n",
-      "processing game 26,000...\n",
-      "processing game 27,000...\n",
-      "processing game 28,000...\n",
-      "processing game 29,000...\n",
-      "processing game 30,000...\n",
-      "processing game 31,000...\n",
-      "processing game 32,000...\n",
-      "processing game 33,000...\n",
-      "processing game 34,000...\n",
-      "processing game 35,000...\n",
-      "processing game 36,000...\n",
-      "processing game 37,000...\n",
-      "processing game 38,000...\n",
-      "processing game 39,000...\n",
-      "processing game 40,000...\n",
-      "processing game 41,000...\n",
-      "processing game 42,000...\n",
-      "processing game 43,000...\n",
-      "processing game 44,000...\n",
-      "processing game 45,000...\n",
-      "processing game 46,000...\n",
-      "processing game 47,000...\n",
-      "processing game 48,000...\n",
-      "processing game 49,000...\n",
-      "processing game 50,000...\n",
-      "processing game 51,000...\n",
-      "processing game 52,000...\n",
-      "processing game 53,000...\n",
-      "processing game 54,000...\n",
-      "processing game 55,000...\n",
-      "processing game 56,000...\n",
-      "processing game 57,000...\n",
-      "processing game 58,000...\n",
-      "processing game 59,000...\n",
-      "processing game 60,000...\n",
-      "processing game 61,000...\n",
-      "processing game 62,000...\n",
-      "processing game 63,000...\n",
-      "processing game 64,000...\n",
-      "processing game 65,000...\n",
-      "processing game 66,000...\n",
-      "processing game 67,000...\n",
-      "processing game 68,000...\n",
-      "processing game 69,000...\n",
-      "processing game 70,000...\n",
-      "processing game 71,000...\n",
-      "processing game 72,000...\n",
-      "processing game 73,000...\n",
-      "processing game 74,000...\n",
-      "processing game 75,000...\n",
-      "processing game 76,000...\n",
-      "processing game 77,000...\n",
-      "processing game 78,000...\n",
-      "processing game 79,000...\n",
-      "processing game 80,000...\n",
-      "processing game 81,000...\n",
-      "processing game 82,000...\n",
-      "processing game 83,000...\n",
-      "processing game 84,000...\n",
-      "processing game 85,000...\n",
-      "processing game 86,000...\n",
-      "processing game 87,000...\n",
-      "processing game 88,000...\n",
-      "processing game 89,000...\n",
-      "processing game 90,000...\n",
-      "processing game 91,000...\n",
-      "processing game 92,000...\n",
-      "processing game 93,000...\n",
-      "processing game 94,000...\n",
-      "processing game 95,000...\n",
-      "processing game 96,000...\n",
-      "processing game 97,000...\n",
-      "processing game 98,000...\n",
-      "processing game 99,000...\n",
-      "processing game 100,000...\n",
-      "processing game 101,000...\n",
-      "processing game 102,000...\n",
-      "processing game 103,000...\n",
-      "processing game 104,000...\n",
-      "processing game 105,000...\n",
-      "processing game 106,000...\n",
-      "processing game 107,000...\n",
-      "processing game 108,000...\n",
-      "processing game 109,000...\n",
-      "processing game 110,000...\n",
-      "processing game 111,000...\n",
-      "processing game 112,000...\n",
-      "processing game 113,000...\n",
-      "processing game 114,000...\n",
-      "processing game 115,000...\n",
-      "processing game 116,000...\n",
-      "processing game 117,000...\n",
-      "processing game 118,000...\n",
-      "processing game 119,000...\n",
-      "processing game 120,000...\n",
-      "processing game 121,000...\n",
-      "processing game 122,000...\n",
-      "processing game 123,000...\n",
-      "processing game 124,000...\n",
-      "processing game 125,000...\n",
-      "processing game 126,000...\n",
-      "processing game 127,000...\n",
-      "processing game 128,000...\n",
-      "processing game 129,000...\n",
-      "processing game 130,000...\n",
-      "processing game 131,000...\n",
-      "processing game 132,000...\n",
-      "processing game 133,000...\n",
-      "processing game 134,000...\n",
-      "processing game 135,000...\n",
-      "processing game 136,000...\n",
-      "processing game 137,000...\n",
-      "processing game 138,000...\n",
-      "processing game 139,000...\n",
-      "processing game 140,000...\n",
-      "processing game 141,000...\n",
-      "processing game 142,000...\n",
-      "processing game 143,000...\n",
-      "processing game 144,000...\n",
-      "processing game 145,000...\n",
-      "processing game 146,000...\n",
-      "processing game 147,000...\n",
-      "processing game 148,000...\n",
       "preparing to save file...\n",
       "done\n"
      ]
@@ -233,7 +100,7 @@
     "\n",
     "print('preparing to save file...')\n",
     "#thisgameevents_df\n",
-    "with open('events.json','w') as f:\n",
+    "with open('events_2010s.json','w') as f:\n",
     "    json.dump(allgames, f)\n",
     "print('done')"
    ]
