Revised file handling to correctly get files when teams move leagues or change names
The "Milwaukee Effect"

--- a/4. Add derived games.ipynb
+++ b/4. Add derived games.ipynb
@@ -45,7 +45,8 @@
    "source": [
     "derivedfiles = []\n",
     "\n",
-    "yeararray = np.linspace(1921,2016,96)\n",
+    "#yeararray = np.linspace(1921,2016,96)\n",
+    "yeararray = [1970]\n",
     "\n",
     "for oneyear in yeararray:\n",
     "    for itsleague in ['A', 'N']:\n",
@@ -68,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2,418 derived games found and processed\n"
+      "0 derived games found and processed\n"
      ]
     }
    ],
@@ -202,21 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded original list of games (n=213,307)\n",
-      "Calculated each gameID for comparison\n",
-      "Saved list of all games (n=213,307)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "allgames_df = pandas.read_csv('gamedata.csv', low_memory=False)\n",
     "#allgames_df = allgames_df.set_index('gameID')\n",
@@ -244,32 +235,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded events data for 145,751 games\n"
+      "Loaded events data for 53,044 events\n"
      ]
     }
    ],
    "source": [
-    "with open('events_raw.json','r') as f:\n",
+    "with open('raw/events_raw_1970.json','r') as f:\n",
     "    allevents = json.load(f)\n",
-    "print('Loaded events data for {0:,.0f} games'.format(len(allevents)))"
+    "print('Loaded events data for {0:,.0f} events'.format(len(allevents)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Derived games that appear in the full games list: 2,418\n",
-      "Derived games that already appeared in the events list: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# All derived games appear in the game list, but none appear in the current events list. That is as it should be.\n",
     "allevents_df = pandas.DataFrame(allevents)\n",
@@ -280,20 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Previously, events data includes events from 145,751 games.\n",
-      "Now, events data includes events from 148,169 games.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Previously, events data includes events from {0:,.0f} games.'.format(len(allevents)))\n",
     "allevents = allevents + derivedgames\n",
@@ -303,21 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Events with derived events file saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('events_with_derived.json', 'w') as f:\n",
+    "with open('with_derived/events_with_derived_1970.json', 'w') as f:\n",
     "    json.dump(allevents, f)\n",
     "print('Events with derived events file saved')"
    ]
