Haven't checked this in a while, it probably changed
Dea Future Jordan, sorry for the poor documentation. I suck.

--- a/6. Organize events.ipynb
+++ b/6. Organize events.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -17,23 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "15467\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# runs in about 5 minutes\n",
-    "with open('events_with_derived_2010s.json','r') as f:\n",
+    "# runs in about 5 minutes \n",
+    "with open('with_derived/events_with_derived_1930.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "print(len(allgames))\n",
@@ -43,36 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "processing game 0...\n",
-      "processing game 1,000...\n",
-      "processing game 2,000...\n",
-      "processing game 3,000...\n",
-      "processing game 4,000...\n",
-      "processing game 5,000...\n",
-      "processing game 6,000...\n",
-      "processing game 7,000...\n",
-      "processing game 8,000...\n",
-      "processing game 9,000...\n",
-      "processing game 10,000...\n",
-      "processing game 11,000...\n",
-      "processing game 12,000...\n",
-      "processing game 13,000...\n",
-      "processing game 14,000...\n",
-      "processing game 15,000...\n",
-      "preparing to save file...\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "column_list = ['event_in_game', 'event_type', 'inning', 'home_or_visitor', 'batterID']\n",
     "column_list += ['pitch_count', 'pitch_sequence', 'event', 'comment', 'sub_team', 'sub_batting_order', 'sub_position']#, 'gameID']\n",
@@ -82,7 +49,7 @@
     "for i in range(0,len(allgames)):\n",
     "    thisgamedict = allgames[i]\n",
     "    thisgameevents_df = pandas.DataFrame(thisgamedict['events'], columns=column_list)\n",
-    "    if (numpy.mod(i,1000) == 0):\n",
+    "    if (numpy.mod(i,100) == 0):\n",
     "        print('processing game {0:,.0f}...'.format(i))\n",
     "    for j in range(0,len(thisgameevents_df)): #- 1):\n",
     "        if (thisgameevents_df.iloc[j]['event_type'] != 'play'):\n",
@@ -100,7 +67,7 @@
     "\n",
     "print('preparing to save file...')\n",
     "#thisgameevents_df\n",
-    "with open('events_2010s.json','w') as f:\n",
+    "with open('events_json/events_1930.json','w') as f:\n",
     "    json.dump(allgames, f)\n",
     "print('done')"
    ]
